--- a/practicasflexbox/index.html
+++ b/practicasflexbox/index.html
@@ -35,18 +35,32 @@
     <!--Cuerpo-->
     <main>
         <section id="inicio">
-            <div class="slider slide1">
-                <img src="" alt="">
+        <div class="slider">
+            <div class="slide">
+                <img src="img/sirenita 5.jpg" alt="">
             </div>
 
-            <div class="slider slide2">
-                <img src="" alt="">
+            <div class="slide">
+                <img src="img/sirenita 1.jpeg" alt="">
             </div>
 
-            <div class="slider slide3">
-                <img src="" alt="">
+            <div class="slide">
+                <img src="img/sirenita 3.webp" alt="">
             </div>
 
+            <div class="slide">
+                <img src="img/sirena.jpg" alt="">
+            </div>
+        </div>
+
+        </section>
+
+        <section id="personajes">
+            <div class="content-personajes">
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
         </section>
     </main>
     <!--Cuerpo-->
